--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.victoriasantos.libertadoresupdates">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activities.RecuperacaoSenhaActivity"></activity>
+        <activity android:name=".view.activities.ProfileActivity"></activity>
+        <activity android:name=".view.activities.RecuperacaoSenhaActivity" />
         <activity android:name=".view.activities.CadastroActivity" />
         <activity android:name=".view.activities.LoginActivity">
             <intent-filter>
