--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activities.JogosActivity"></activity>
+        <activity android:name=".view.activities.JogosAcontecendoActivity"></activity>
+        <activity android:name=".view.activities.JogosAnterioresActivity" />
+        <activity android:name=".view.activities.ProximosJogosActivity" />
+        <activity android:name=".JogosAnterioresActivity" />
+        <activity android:name=".view.activities.activity_proximos_jogos" />
+        <activity android:name=".view.activities.JogosActivity" />
         <activity android:name=".view.activities.TimesActivity" />
         <activity android:name=".view.activities.GruposActivity" />
         <activity android:name=".view.activities.ProfileActivity" />
