--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,9 +66,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.vicmikhailau:MaskedEditText:3.0.4'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    //ChatBot libraries
+    implementation 'com.github.bassaer:chatmessageview:1.10.0'
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.12.1'
 
 
     // CardView
